--- a/index.html
+++ b/index.html
@@ -9,28 +9,36 @@
 </head>
 <body>
     <header>
-
+        <h1>Kisebb nyaralótavak Magyarországon</h1>
     </header>
-    <h1>Kisebb nyaralótavak Magyarországon</h1>
-    <p>Ha a nyaralás kerül szóba, gyakran vitatkozunk rajta: Balaton-e, avagy Horvátország...? Pedig a választék ennél sokkal bővebb. Hiszen ha kevés pénzből akarunk színes élményeket megélni, akkor érdemes körülnézni Magyarország kisebb tavai között is, melyek partjain nyáron - helyszín és időpont függvényében - gazdagon válogathatunk a hangos fesztiválok, vagy épp a csendes, természetközeli programok tarka palettájáról.</p>
-    <section>
+    
+    <p id="szoveg">Ha a nyaralás kerül szóba, gyakran vitatkozunk rajta: Balaton-e, avagy Horvátország...? Pedig a választék ennél sokkal bővebb. Hiszen ha kevés pénzből akarunk színes élményeket megélni, akkor érdemes körülnézni Magyarország kisebb tavai között is, melyek partjain nyáron - helyszín és időpont függvényében - gazdagon válogathatunk a hangos fesztiválok, vagy épp a csendes, természetközeli programok tarka palettájáról.</p>
+    <div id="egesz">
+    <div class="to" style="float: left">
        <h3>Tisza-tó </h3>
+       <img src="tiszato.jpg">
        <p>Az ország legnagyobb mesterséges tava tele kalandokkal. A Kiskörei víztározó, vagy ahogy legtöbben ismerjük, a Tisza-tó egyre inkább kedvelt úti céllá válik, mert az idelátogatókra egyre több kaland vár. </p>
-    </section>
-    <section>
-        <h3> Vadása-tó </h3>
+    </div>
+    <div class="to" style="float: right">
+        <h3>Vadása-tó </h3>
+        <img src="vadasato.jpg">
         <p>A Vadása-tó egy valójában két tóból álló mesterséges tóegyüttes neve Vas megye déli részén, az Őrségben.  Kedvelt üdülő- és horgászhely.</p>
-    </section>
-    <section>
+    </div>
+    </div>
+    <div id="egesz2">
+    <div class="to" style="float: left">
         <h3>Pécsi-tó</h3>
+        <img src="pecsito.jpg">
         <p>Orfű városában található a Pécsi-tó, mely az orfűi tórendszerhez tartozik és a legnagyobb tavát alkotja. A tavat teljes mértékben mesterségesen hozták létre, mégpedig 1966-ban. Elhelyezkedését tekintve az északi oldalán terül el a Mecseknek, melynek területe 72 hektár. A csodás szépségű tó és területe országosan kedvelt üdülő- és horgászhely.</p>
-    </section>
-    <section>
+    </div>
+    <div class="to"  style="float: right">
         <h3>Bánki-tó</h3>
+        <img src="bankito.jpg">
         <p>Palócföld legismertebb üdülőhelye a Cserhát és a Börzsöny határán fekvő hangulatos Bánki-tó, a palóc Balaton. A Bánk falu területén fekvő 7 hektáros, a Jenői-patak felduzzasztásával létrehozott, átlagosan 4 méter mély tó közkedvelt kiránduló- és üdülőhely. A víz elsősorban horgászparadicsom, de a nyári hónapokban a tó falu felé eső részén létesített, rendezett strand rendkívül népszerű a fürdőzni, napozni vágyók körében.</p>
-    </section>
+    </div>
+</div>
     <footer>
-
+        <p>Készítette: Somodi Konrád, Vargacz Gergő, Molnár Bence</p>
     </footer>
 </body>
 </html>
